# wpilib-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: index.html
docs/assets/: index-BqbqkfqP.js  index-CYgJBlhl.js  index-CjPwZ5WI.css  index-CovhmMny.css  index-D1r_HBY6.js  index-DCtspgM3.css
src/tests/: test_utils_files.py  test_utils_preferences.py
src/wpilib_cli/: __init__.py  cli.py  examples_loader.py  extensions_loader.py  package_path_rewriter.py  prompts.py  template_downloader.py  templates_loader.py  utils.py  versions_loader.py
src/wpilib_cli/commands/: __init__.py  create.py
src/wpilib_cli/downloaders/: __init__.py  template_downloader.py
src/wpilib_cli/loaders/: __init__.py  examples_loader.py  extensions_loader.py  templates_loader.py  versions_loader.py
src/wpilib_cli/prompts/: __init__.py  project_prompts.py
src/wpilib_cli/utils/: __init__.py  files.py  gradle.py  ide_checker.py  java_utils.py  preferences.py
website/: README.md  index.html  package-lock.json  package.json  vite.config.ts
website/src/: App.svelte  app.css
