[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wpilib-cli"
version = "1.0.0beta"
authors = [
    { name = "Hao Huang", email = "huang.6224@osu.edu" },
    { name = "Adrian Johnson", email = "drinz@mit.edu" },
    { name = "Dane Briscoe", email = "dbriscoe@highpoint.edu" },
]
description = "CLI tool to generate new FRC Robotics Projects"
readme = "README.md"
license = "MIT"
dependencies = [
    "questionary"
]

[project.scripts]
wpilib-cli = "wpilib_cli.cli:main"